--- a/index.html
+++ b/index.html
@@ -184,10 +184,7 @@
                             <div class="text-center my-5">
                                 <h2 class="display-5 fw-bolder"><span class="text-gradient d-inline">About Me</span></h2>
                                 <p class="lead fw-light mb-4">My name is Aman (aman8708371@gmail.com).</p>
-                                <p class="text-muted">Enthusiastic and detail-oriented recent graduate with a strong foundation in data analysis, proficient in Python
-                                    for data manipulation and analysis, adept at data cleaning and SQL querying. Skilled in utilizing Power BI for
-                                    impactful data visualization. Eager to apply academic knowledge and practical skills in a dynamic data analyst
-                                    role.</p>
+                                <p class="text-muted">Dynamic and ambitious fresher with a passion for both web development and data analysis. Equipped with a solid foundation in programming languages, including HTML, CSS, JavaScript, Python, and SQL, I am eager to embark on a career that merges the realms of technology and data-driven insights. With a keen eye for detail and a commitment to continuous learning, I aspire to leverage my skills to contribute meaningfully to innovative projects in both web development and data analysis domains. My adaptability, creativity, and enthusiasm make me a valuable asset to any team, and I am excited to apply my knowledge to tackle real-world challenges and drive impactful results.</p>
                                 <div class="d-flex justify-content-center fs-2 gap-4">
                                     
                                    
